[metadata]
name = pysharp
author = Harrison Feng
author-email = feng.harrison@gmail.com
summary = Sharp python code for coding life
description-file =
    README.rst
home-page = n/a
license = Apache License 2.0
classifier = 

[files]
packages =
    pysharp

[entry_points]


[bdist_wheel]
universal = 1


[build_sphinx]
all_files = 1
build-dir = docs/build
source-dir = docs/source
